--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ rvm:
 install: true
 
 addons:
-  firefox: "27.0"
+  firefox:"27.0"
 
 before_script:
+  - phantomjs --version
   - ./scripts/run_sc_server_master.sh
   - sleep 5 # give sc-server some time to start
 
