--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
   firefox: "27.0"
 
 before_script:
+  - env
   - phantomjs --version
   - ./scripts/run_sc_server_master.sh
   - sleep 5 # give sc-server some time to start
